test_output.txt
Adding D:\01_SimpleSolve\01_Experiments\Unitamil\src to sys.path
============================= test session starts =============================
platform win32 -- Python 3.12.6, pytest-9.0.2, pluggy-1.6.0 -- D:\01_SimpleSolve\01_Experiments\Unitamil\.venv\Scripts\python.exe
cachedir: .pytest_cache
rootdir: D:\01_SimpleSolve\01_Experiments\Unitamil
plugins: anyio-4.12.1
collecting ... collected 2 items / 2 errors

=================================== ERRORS ====================================
_______________ ERROR collecting tests/core/test_normalizer.py ________________
.venv\\Lib\\site-packages\\_pytest\\python.py:507: in importtestmodule\n    mod = import_path(\n.venv\\Lib\\site-packages\\_pytest\\pathlib.py:587: in import_path\n    importlib.import_module(module_name)\nC:\\Program Files\\Python312\\Lib\\importlib\\__init__.py:90: in import_module\n    return _bootstrap._gcd_import(name[level:], package, level)\n           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n<frozen importlib._bootstrap>:1387: in _gcd_import\n    ???\n<frozen importlib._bootstrap>:1360: in _find_and_load\n    ???\n<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked\n    ???\n<frozen importlib._bootstrap>:935: in _load_unlocked\n    ???\n.venv\\Lib\\site-packages\\_pytest\\assertion\\rewrite.py:188: in exec_module\n    source_stat, co = _rewrite_test(fn, self.config)\n                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n.venv\\Lib\\site-packages\\_pytest\\assertion\\rewrite.py:357: in _rewrite_test\n    tree = ast.parse(source, filename=strfn)\n           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\nC:\\Program Files\\Python312\\Lib\\ast.py:52: in parse\n    return compile(source, filename, mode, flags,\nE     File "D:\\01_SimpleSolve\\01_Experiments\\Unitamil\\tests\\core\\test_normalizer.py", line 7\nE       decomposed = "\\u0\u0ba4\u0bbf\u0ba9\\u0BCD" # Example placeholder\nE                    ^^^^^^^^^^^^^^\nE   SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 0-2: truncated \\uXXXX escape
________________ ERROR collecting tests/core/test_pipeline.py _________________
ImportError while importing test module 'D:\01_SimpleSolve\01_Experiments\Unitamil\tests\core\test_pipeline.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
C:\Program Files\Python312\Lib\importlib\__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
tests\core\test_pipeline.py:2: in <module>
    from app.core.pipeline import ProcessingPipeline
src\app\core\pipeline.py:5: in <module>
    from .converter import LegacyConverter
src\app\core\converter.py:1: in <module>
    from typing import str
E   ImportError: cannot import name 'str' from 'typing' (C:\Program Files\Python312\Lib\typing.py)
============================== warnings summary ===============================
.venv\Lib\site-packages\pytesseract\pytesseract.py:32
  D:\01_SimpleSolve\01_Experiments\Unitamil\.venv\Lib\site-packages\pytesseract\pytesseract.py:32: DeprecationWarning: 'pkgutil.find_loader' is deprecated and slated for removal in Python 3.14; use importlib.util.find_spec() instead
    numpy_installed = find_loader('numpy') is not None

.venv\Lib\site-packages\pytesseract\pytesseract.py:36
  D:\01_SimpleSolve\01_Experiments\Unitamil\.venv\Lib\site-packages\pytesseract\pytesseract.py:36: DeprecationWarning: 'pkgutil.find_loader' is deprecated and slated for removal in Python 3.14; use importlib.util.find_spec() instead
    pandas_installed = find_loader('pandas') is not None

-- Docs: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
=========================== short test summary info ===========================
ERROR tests/core/test_normalizer.py
ERROR tests/core/test_pipeline.py
!!!!!!!!!!!!!!!!!!! Interrupted: 2 errors during collection !!!!!!!!!!!!!!!!!!!
======================== 2 warnings, 2 errors in 0.54s ========================
